--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -77,7 +77,7 @@
                                     <i class="fa fa-chevron-right ml-1"></i>
                                 </a>
                                 <a class="d-md-none" href="{{ article.get_next.get_absolute_url }}">
-                                    下一页<i class="fa fa-chevron-right ml-1"></i>
+                                    下一篇<i class="fa fa-chevron-right ml-1"></i>
                                 </a>
                                 {% endif %}
                             </li>
@@ -103,7 +103,7 @@
 {% block end_file %}
 {% if user.is_authenticated %}
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-<script src="{% static 'comment/js/editor.js' %}?v=20180113.0505"></script>
+<script src="{% static 'comment/js/editor.js' %}?v=20180113.059"></script>
 <script src="{% static 'comment/js/activate-power.js' %}?v=20180120"></script>
 <script>
 var sw=window.screen.width;if(sw>1200){POWERMODE.colorful=true;POWERMODE.shake=false;document.body.addEventListener('input',POWERMODE)};
